<resources>
    <string name="app_name">Folklore</string>
    <string name="home_screen_title">Join with\nupcoming events</string>
    <string name="home_screen_title_collapsed">Join with upcoming events</string>
    <string name="header_near_you">Near you</string>
    <string name="header_popular">Popular</string>
    <string name="tab_home">Home</string>
    <string name="tab_favorites">Favorites</string>
    <string name="label_search_and_filter">Search and filter</string>
    <string name="app_logo_description">App Logo</string>
    <string name="search_icon_description">Search icon option</string>
    <string name="search_placeholder">Search for events</string>
    <string name="empty_search_results_title">No events found</string>
    <string name="empty_search_results_subtitle">Please try a different search query…</string>
    <string name="clear_query_button_description">Clear Search Query</string>
    <string name="close_button_description">Close Button</string>
    <string name="favorites_screen_title">My Favorites</string>
</resources>