appId: com.folklore.app.col
---
- launchApp:
    clearState: true
- assertVisible:
    text: "Near you"
- tapOn:
    point: "50%,49%"
- assertVisible:
      id: "LikeButton"
- tapOn:
    id: "LikeButton"
- assertVisible:
    id: "LikedIcon"
- tapOn: "Go Back"




